[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
rtt-target = "0.5.0"
cortex-m-rt = "0.7.3"
[dependencies.stm32f1]
version = "0.15.1"
features = ["stm32f103"]


[[bin]]
name = "main"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
